<resources>
    <string name="app_name">Pp</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="email">Email</string>
    <string name="homebase">Homebase</string>
    <string name="sign_up">Sign Up</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="license">License</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="info_reset_link">Please enter your email address below and we\'ll send you a link to reset your password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="new_ppr_request">New PPR Request</string>
    <string name="pay_fees">Pay fees</string>
</resources>
