<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context=".ForgotPasswordActivity">

    <android.support.constraint.Guideline
        android:id="@+id/forgot_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <View
        android:id="@+id/forgot_view_logoBckgrnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/forgot_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:fontFamily="@font/candal"
        android:text="@string/forgot_your_password"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_toolbar" />

    <TextView
        android:id="@+id/forgot_tv_subTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/cantarell"
        android:text="@string/info_reset_link"
        android:textAlignment="textStart"
        android:textColor="@color/colorLightGray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_tv_title" />

    <android.support.v7.widget.CardView
        android:id="@+id/forgot_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@+id/forgot_view_logoBckgrnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_view_logoBckgrnd">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/forgot_ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/forgot_iv_Email"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/outline_mail_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/forgot_et_Email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cantarell"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/forgot_iv_Email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/forgot_iv_Email"
                app:layout_constraintTop_toTopOf="@+id/forgot_iv_Email" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/forgor_btn_resetLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:background="@drawable/black_btn_selector"
        android:text="@string/btn_sign_in"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_cardView" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/forgot_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title=" ">

    </android.support.v7.widget.Toolbar>


</android.support.constraint.ConstraintLayout>