<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <android.support.constraint.Guideline
        android:id="@+id/signup_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/signup_iv_logoBckgrnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/temp_bckgrnd_signin"
        app:layout_constraintBottom_toTopOf="@+id/signup_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_tv_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:fontFamily="@font/candal"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/signup_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/signup_cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_tv_SignUp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/signup_ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/signup_iv_name"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginTop="16dp"
                android:src="@drawable/outline_person_24px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signup_et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cantarell"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/signup_iv_name"
                app:layout_constraintEnd_toStartOf="@+id/signup_verticalView"
                app:layout_constraintStart_toEndOf="@+id/signup_iv_name"
                app:layout_constraintTop_toTopOf="@+id/signup_iv_name" />

            <View
                android:id="@+id/signup_verticalView"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorLightGray"
                app:layout_constraintBottom_toTopOf="@+id/signup_horizontalView_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signup_et_surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cantarell"
                android:hint="@string/surname"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="@+id/signup_et_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/signup_verticalView"
                app:layout_constraintTop_toTopOf="@+id/signup_et_name" />

            <View
                android:id="@+id/signup_horizontalView_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorLightGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_iv_name" />

            <ImageView
                android:id="@+id/signup_iv_license"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginTop="16dp"
                android:src="@drawable/outline_receipt_24px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_horizontalView_1" />

            <EditText
                android:id="@+id/signup_et_license"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cantarell"
                android:hint="@string/license"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/signup_iv_license"
                app:layout_constraintStart_toEndOf="@+id/signup_iv_license"
                app:layout_constraintTop_toTopOf="@+id/signup_iv_license" />

            <View
                android:id="@+id/signup_horizontalView_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorLightGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_iv_license" />

            <ImageView
                android:id="@+id/signup_iv_phone"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginTop="16dp"
                android:src="@drawable/outline_phone_24px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_horizontalView_2" />

            <EditText
                android:id="@+id/signup_et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cantarell"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/signup_iv_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/signup_iv_phone"
                app:layout_constraintTop_toTopOf="@+id/signup_iv_phone" />

            <View
                android:id="@+id/signup_horizontalView_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorLightGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_iv_phone" />

            <ImageView
                android:id="@+id/signup_iv_homebase"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginTop="16dp"
                android:src="@drawable/outline_place_24px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_horizontalView_3" />

            <EditText
                android:id="@+id/signup_et_homebase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cantarell"
                android:hint="@string/homebase"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/signup_iv_homebase"
                app:layout_constraintStart_toEndOf="@+id/signup_iv_homebase"
                app:layout_constraintTop_toTopOf="@+id/signup_iv_homebase" />

            <View
                android:id="@+id/signup_horizontalView_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorLightGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_iv_homebase" />

            <ImageView
                android:id="@+id/signup_iv_email"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginTop="16dp"
                android:src="@drawable/outline_mail_24px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_horizontalView_4" />

            <EditText
                android:id="@+id/signup_et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cantarell"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/signup_iv_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/signup_iv_email"
                app:layout_constraintTop_toTopOf="@+id/signup_iv_email" />

            <View
                android:id="@+id/signup_horizontalView_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorLightGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_iv_email" />

            <ImageView
                android:id="@+id/signup_iv_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/outline_lock_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_horizontalView_5" />

            <EditText
                android:id="@+id/signup_et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cantarell"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/signup_iv_password"
                app:layout_constraintEnd_toStartOf="@+id/signup_tv_showPass"
                app:layout_constraintStart_toEndOf="@+id/signup_iv_password"
                app:layout_constraintTop_toTopOf="@+id/signup_iv_password" />

            <TextView
                android:id="@+id/signup_tv_showPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:fontFamily="@font/cantarell"
                android:text="@string/show"
                android:textColor="@color/colorSea"
                app:layout_constraintBottom_toBottomOf="@+id/signup_et_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/signup_et_password" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/signup_btn_SignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:background="@drawable/black_btn_selector"
        android:text="@string/btn_register"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_cardView1" />

    <TextView
        android:id="@+id/signup_tv_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        android:textColorLink="@color/colorSea"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn_SignIn"
        tools:text="@tools:sample/full_names" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title=" ">

    </android.support.v7.widget.Toolbar>


</android.support.constraint.ConstraintLayout>